deploy: 7f6822fdf63dea4a59f930355bb5510315283c7c

--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文档中心 - </title>
+    <title>文档中心 - PageForge</title>
     <link rel="icon" href="..//assets/logo.svg" type="image/x-icon">
 
     <!-- 基础样式文件 -->
@@ -30,7 +30,7 @@
                         
                             <a href="/" class="flex items-center">
                                 <img src="..//assets/logo.svg"
-                                     alt=""
+                                     alt="PageForge"
                                      class="h-10 w-auto object-contain transition-transform hover:scale-105">
                             </a>
                         
@@ -221,7 +221,7 @@
         <footer class="bg-gray-50 dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700">
     <div class="container mx-auto px-4 py-6">
         <div class="text-center text-gray-600 dark:text-gray-400">
-            <p>&copy; 2024  使用 ❤️ PageForge 构建 PageForge 是一款现代化的静态页面生成与部署平台，旨在帮助用户快速创建精美的静态网站，并一键部署到 GitHub Pages。 无论是个人博客、项目文档还是企业官网，PageForge 都能让你轻松实现高效构建、智能部署和即时上线。</p>
+            <p>&copy; 2024 PageForge 使用 ❤️ PageForge 构建 PageForge 是一款现代化的静态页面生成与部署平台，旨在帮助用户快速创建精美的静态网站，并一键部署到 GitHub Pages。 无论是个人博客、项目文档还是企业官网，PageForge 都能让你轻松实现高效构建、智能部署和即时上线。</p>
         </div>
     </div>
 </footer>
