deploy: d46501532a146e2252fc6210fefef776bfc1b19c

--- a/zh-CN/index.html
+++ b/zh-CN/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>欢迎使用 PageForge - PageForge</title>
-    <link rel="icon" href=".//assets/logo.svg" type="image/x-icon">
+    <link rel="icon" href="..//assets/logo.svg" type="image/x-icon">
 
     <!-- 基础样式文件 -->
     <link rel="stylesheet" href="/assets/pageforge.min.css">
@@ -28,8 +28,8 @@
                 <div class="flex items-center justify-between flex-1 lg:flex-none">
                     <div class="flex items-center space-x-4 shrink-0">
                         
-                            <a href="/" class="flex items-center">
-                                <img src=".//assets/logo.svg"
+                            <a href="/zh-CN" class="flex items-center">
+                                <img src="..//assets/logo.svg"
                                      alt="PageForge"
                                      class="h-10 w-auto object-contain transition-transform hover:scale-105">
                             </a>
@@ -527,7 +527,7 @@
                 
                     <div class="flex flex-col sm:flex-row items-start sm:items-center gap-3">
                         <a href="/" class="flex items-center">
-                            <img src=".//assets/logo.svg"
+                            <img src="..//assets/logo.svg"
                                  alt="PageForge"
                                  class="h-12">
                         </a>
