--- a/zh-CN/getting-started/get-started.html
+++ b/zh-CN/getting-started/get-started.html
@@ -28,7 +28,7 @@
                 <div class="flex items-center justify-between flex-1 lg:flex-none">
                     <div class="flex items-center space-x-4 shrink-0">
                         
-                            <a href="/" class="flex items-center">
+                            <a href="/zh-CN" class="flex items-center">
                                 <img src="../..//assets/logo.svg"
                                      alt="PageForge"
                                      class="h-10 w-auto object-contain transition-transform hover:scale-105">
