--- a/zh-CN/usage/alert.html
+++ b/zh-CN/usage/alert.html
@@ -1257,6 +1257,19 @@
 
 </body>
 
+<!-- 处理 404 -->
+<script>
+    (function () {
+        const i18nEnable = `true`;
+        if (!i18nEnable) return;
+
+        const hasRule = `false`;
+        if (!hasRule) {
+            window.location.href = `/zh-CN/404.html` || `/404.html`;
+        }
+    })();
+</script>
+
 <!-- 基础脚本文件 -->
 <script src="/assets/pageforge.min.js"></script>
 
