deploy: 9b2487aeb13ad277919235b0ebb5136ba211b711

--- a/zh-CN/index.html
+++ b/zh-CN/index.html
@@ -443,11 +443,11 @@
                     为您的企业或网站提供最前沿的技术支持和解决方案
                 </p>
                 <div class="mt-10 flex items-center justify-center gap-x-6">
-                    <a href="/getting-started/get-started.html"
+                    <a href="/zh-CN/getting-started/get-started.html"
                        class="rounded-xl bg-indigo-600 px-8 py-3.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 transition-all duration-300">
                         开始使用
                     </a>
-                    <a href="/usage/href.html"
+                    <a href="/zh-CN/usage/href.html"
                        class="text-sm font-semibold leading-6 text-white hover:text-indigo-300 transition-all duration-300">
                         了解更多 <span aria-hidden="true">→</span>
                     </a>
@@ -588,7 +588,7 @@
                     立即加入我们，开启您的技术创新之旅
                 </p>
                 <div class="mt-10 flex justify-center">
-                    <a href="/getting-started/get-started.html"
+                    <a href="/zh-CN/getting-started/get-started.html"
                        class="rounded-md bg-white px-8 py-3.5 text-center text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white transition-all duration-300">
                         立即注册
                     </a>
